# mast3r-tinygrad

./: .gitignore  .gitmodules  demo.py  pyproject.toml
mast3r/: catmlp_dpt_head.py  fast_nn.py  model.py
mast3r/utils/: path_to_dust3r.py  pixel_shuffle.py
