[project]
name = "mast3r-tinygrad"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "some16", email = "106182433+some16@users.noreply.github.com"},
]
dependencies = [
    "tinygrad>=0.9.2",
    "scipy>=1.14.1",
    "einops>=0.8.0",
    "tqdm>=4.66.5",
    "pillow>=11.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
